--- a/计算机基础/操作系统/IO/走进科学之揭开神秘的零拷贝.md
+++ b/计算机基础/操作系统/IO/走进科学之揭开神秘的零拷贝.md
@@ -20,7 +20,7 @@
 ## 接口模块和DMA阶段
 这一部分介绍的也是我们后面具体
 ### 接口模块
-在冯诺依曼结构中，每个部件之间均有单独连线，不仅先多，而且导致扩展I/O设备很不容易，我们上面的早期阶段就是这个体系，叫作分散连接。扩展一个I/O设备得连接很多线。所以引入了总线连接方式，将多个设备连接在同一组总线上，构成设备之间的公共传输通道。
+在冯诺依曼结构中，每个部件之间均有单独连线，不仅线多，而且导致扩展I/O设备很不容易，我们上面的早期阶段就是这个体系，叫作分散连接。扩展一个I/O设备得连接很多线。所以引入了总线连接方式，将多个设备连接在同一组总线上，构成设备之间的公共传输通道。
 ![](https://user-gold-cdn.xitu.io/2018/8/1/164f5490f0bcba74?w=495&h=247&f=png&s=8645)
 这个也是现在我们家用电脑或者一些小型计算器的数据交换结构。
 
