--- a/计算机基础/操作系统/IO/走进科学之揭开神秘的零拷贝.md
+++ b/计算机基础/操作系统/IO/走进科学之揭开神秘的零拷贝.md
@@ -37,7 +37,7 @@
 
 一般来说我们只需要关注DMA和中断两种即可，下面介绍的都是用来适合大型计算机的一些，这里只说简单的过一下:
 ## 具有通道结构的阶段
-在小型计算机中采用DMA方式可以实现高速I/O设备与主机之间组成数据的交换，但在大中型计算机中，I/O配置繁多，数据传送平凡，若采用DMA方式会出现一系列问题。
+在小型计算机中采用DMA方式可以实现高速I/O设备与主机之间组成数据的交换，但在大中型计算机中，I/O配置繁多，数据传送频繁，若采用DMA方式会出现一系列问题。
 - 每台I/O设备都配置专用额DMA接口，不仅增加了硬件成本，而且解决DMA和CPU访问冲突问题，会使控制变得十分复杂。
 - CPU需要对众多的DMA接口进行管理，同样会影响工作效率。
 
