--- a/计算机基础/数据库/mysql/为什么开发人员必须要了解数据库锁？.md
+++ b/计算机基础/数据库/mysql/为什么开发人员必须要了解数据库锁？.md
@@ -90,10 +90,10 @@ show variables like '%storage_engine%';
 
 隔离级别 | 脏读 | 不可重复读 | 幻读
 ---|---|---|---
-未提交读(RUC) | NO | NO | NO
-已提交读(RC) | YES | NO | NO
-可重复读(RR) | YES | YES | NO
-可串行化 | YES | YES | YES
+未提交读(RUC) | YES | YES | YES
+已提交读(RC) | NO | YES | YES
+可重复读(RR) | NO | NO | YES
+可串行化 | NO | NO | NO
 
 小明注意到在收集资料的过程中，有资料写到InnoDB和其他数据库有点不同，InnoDB的可重复读其实就能解决幻读了，小明心想:这InnoDB还挺牛逼的，我得好好看看到底是怎么个原理。
 
